fix text overlapping on main event and adjust spacing

--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -76,7 +76,7 @@ li p {
 .event-articles{
   position: relative;
   width: 100%;
-	height: 14.5vw;
+	height: 11vw;
 	border: 1px solid white;
 	border-radius: 10px;
 	margin: 0.5% 0;
@@ -88,12 +88,12 @@ li p {
   transform: translateY(-50%);
   top: 2.8em;
   width: 20%;
-	left: 1%;
+	left: 2%;
 }
 
 .event-artist {
 	top: 5%;
-	text-decoration: underline;
+	text-decoration: none;
 	width: auto;
 	font-size: 148%;
 	margin-bottom: 0.4em;
@@ -102,10 +102,12 @@ li p {
 .event-venue {
 	position: absolute;
 	top: 5%;
-	right: 3%;
-	font-size: 75%;
+	right: 2%;
+	font-size: 76%;
   text-align: right;
 	padding-top: 0.3em;
+	flex-wrap: wrap;
+	width: 40%;
 }
 
 .event-date{
@@ -118,6 +120,7 @@ li p {
 	bottom: 10%;
 	color: inherit;
 	margin-bottom: 0.2em;
+	font-style: oblique;
 }
 
 #event-info {
